<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.localizador.MainActivity" >

    <!-- <item -->
    <!-- android:id="@+id/action_settings" -->
    <!-- android:orderInCategory="100" -->
    <!-- android:title="@string/action_settings" -->
    <!-- app:showAsAction="never"/> -->

    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_action_location_selected"
        android:showAsAction="always|collapseActionView"
        android:title="@string/action_map"/>
    
    <item
        android:id="@+id/action_cam"
        android:icon="@drawable/ic_action_camera"
        android:showAsAction="always|collapseActionView"
        android:title="@string/action_cam"/>
    <item
        android:id="@+id/action_search"
        android:actionViewClass="android.support.v7.widget.SearchView"
        android:showAsAction="always"
        android:title="@string/action_search"/>

</menu>